<resources>
    <string name="app_name"> Werewolf</string>
    <string name="action_settings">Settings</string>
    <string name="start_menu">Start</string>
    <string name="serviceId" translatable="false">com.google.example.connectionsquickstart.service</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="choose_name_txtView">Welcome!\n\nHow would you like to be named?</string>
    <string name="your_name_hint">Your name</string>
    <string name="remember_my_name_checkBox">Remember my name</string>
    <string name="continue_btn">Continue</string>

    <string name="start_game_title_txtView">What would you like to do?</string>
    <string name="create_game_btn">Create</string>
    <string name="join_game_btn">Join</string>
    <string name="stop_txt">Stop</string>
    <string name="txt_waiting_answer">Waiting response...</string>
    <string name="in_your_game_textView">In your game</string>
    <string name="willing_to_play_txtView">Willing to play</string>
    <string name="nearby_games_txtView">Nearby games</string>
    <string name="accept_player_question">Add this player to your game?</string>

    <string name="connected_to">Connected to </string>
    <string name="join_game_question">Join this game?</string>
    <string name="start">Start</string>
    <string name="game_is_starting">Game is starting!</string>
    <string name="hide_your_device_advice">Hide your device so that nobody sees your role!</string>
    <string name="you_are">You are:</string>
    <string name="villageois">Villager</string>
    <string name="voleur">Thief</string>
    <string name="petite_fille"> Little girl</string>
    <string name="loup_garou"> Werewolf</string>
    <string name="voyante">Seer</string>
    <string name="sorciere">Witch</string>
    <string name="cupidon">Cupid</string>
    <string name="chasseur">Hunter</string>
    <string name="capitaine">Captain</string>
    <string name="maitre">Game master</string>
    <string name="jour">Day</string>

    <string name="game_master_title">Game Master</string>
    <string name="whos_turn">Whose turn is it?</string>
    <string name="nuit">Night</string>
    <string name="no_internet">No internet connection</string>
    <string name="plz_connect_internet">Please connect to Wi-Fi to continue!</string>
    <string name="retry">Retry</string>
    <string name="waitin_answer_title">Request sent!</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="day_txt">Daytime!</string>
    <string name="last_dead">Dead players</string>
    <string name="werewolfs_alive">Werewolves alive</string>
    <string name="players_alive">Players alive</string>
    <string name="night_txt">It\'s night!</string>
    <string name="close_eyes">Please close your eyes</string>
    <string name="missing_player"> players needed!</string>
    <string name="dead_msg">You are dead</string>
    <string name="no_executions">No one has been executed!</string>
    <string name="has_been_executed">" has been executed!"</string>
    <string name="has_voted_to_kill">" has voted to kill "</string>
    <string name="has_change_vote">" has changed his vote for "</string>
    <string name="successful_wolf_kill">"You successfully killed "</string>
    <string name="conseil">Village council</string>
    <string name="vote_jour_txt">The council requests your vote. Choose from the list.</string>
    <string name="vote_du_village">Villages vote</string>
    <string name="vote_capitain_txt">Elect your town\'s captain. Choose from the list.</string>
    <string name="tour_de_table">Gathering of opinion.</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_voyante">ActivityVoyante</string>
    <string name="test">loup-Garou</string>
    <string name="loup">werewolf</string>
    <string name="descriptionVoyante">The seer gets to see someones role every night.</string>
    <string name="descriptionChasseur">When the hunter dies, either from the werewolves, the witch or the villagers vote, he gets to choose someone to die with him.</string>
    <string name="descriptionCupidon">During the first night, cupid chooses two villagers who will fall in love until the end of the game. If one of then dies, the other one succombs with him.</string>
    <string name="descriptionSorciere">The witch wakes up every night after the werewolves go back to sleep. She gets two potions; one is for reviving someone who was killed that night and the other is to kill someone. She only gets to use one potion of each kind per game.</string>
    <string name="descriptionPetiteFille">During the werewolves turn, the little girl gets to wake up and peek at the werewolves.</string>
    <string name="descriptionVoleur">The thief gets to exchange his role with someone else in the night. Afterwards, the other person becomes the thief and gets to steal someone elses role the next night.</string>
    <string name="test2">chasseur</string>
    <string name="test1" />
    <string name="logVoyanteAVu">saw </string>
    <string name="logSeerSawRole">\'s role (</string>
    <string name="logCapitaineVoté">was voted as capitain by the village!</string>
    <string name="logCapitainePasVoté">The village wasn\'t able to elect a capitain!</string>
    <string name="logEveryoneVoted">Everyone has voted!</string>
    <string name="logWantsToKill">wants to kill</string>
    <string name="logNoVillageVote">The village wasn\'t able to agree on someone to execute, no one dies!</string>
    <string name="logLoverDies">is dying of love with</string>
    <string name="logChangedVote">changed his vote to</string>
    <string name="logWantsToEat">wants to eat</string>
    <string name="logAllWolvesAgreed">Every werewolf agreed to eat</string>
    <string name="logHunterKilled">, the hunter, was killed by the village!</string>
    <string name="logVillageVoted">was killed by the village!</string>
    <string name="logStart">-- START --</string>
    <string name="logNightStart">Night is starting.</string>
    <string name="logDayStart">Day is starting.</string>
    <string name="logWerewolvesTurn">The werewolves are waking up.</string>
    <string name="logSeerTurn">The seer is waking up.</string>
    <string name="logWitchTurn">The witch is waking up</string>
    <string name="logThiefTurn">The thief is waking up</string>
    <string name="logCupidTurn">Cupid will choose two lovers.</string>
    <string name="logVillageVoteStart">The council has gathered to choose who they think is a werewolf and kill him.</string>
    <string name="player">players</string>
    <string name="villager">villagers</string>
    <string name="inLoveWith">You are in love with</string>
    <string name="notInLove">You are not in love.</string>
    <string name="and">and</string>
    <string name="logLoversFound">are now in love and will die for each other.</string>
    <string name="descriptionLoup">Every night, the werewolves get together to kill one person.</string>
    <string name="descriptionVillageois">The villager is the base character in the game. He does not get any special powers.</string>

</resources>
